✨ drop jwt bearer token endpoint (logout)
